--- a/Exercicio1/index.html
+++ b/Exercicio1/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Formulario1.css">
 </head>
 <body>
     <form action="">
@@ -13,7 +14,7 @@
         <label for="cidade">Cidade</label>
         <select name="Cidade" id="Cidade"></select>
         <label for="logradouro">Logradouro</label>
-        <input type="text" id="Logradouro" placeholder="Rua, endereço e número">
+        <input type="text" id="Logradouro" placeholder="Rua,endereço e número">
     </form>
     
 </body>
